Carrega conteúdo dinâmico em página e gera html à partir de conteúdo markdown

--- a/contents/blog/2020.02.20-hello-world.md
+++ b/contents/blog/2020.02.20-hello-world.md
@@ -1,4 +1,9 @@
 ---
-title: Hello World!
+title: Comida, Não Bombas - Parte 3 - Estágio
+description: 'Se você caiu aqui sem saber o que é um Comida Não Bombas, leia aqui primeiro:'
 ---
-<h1>Hello World!</h1>
+
+Saindo do campo das ideias e pesquisas, ontem tive a honra e o prazer de fazer uma pequena participação no grupo que distribui comida que a Maíra comentou (Veja a parte 2 no link acima).
+
+
+Saindo do campo das ideias e pesquisas, ontem tive a honra e o prazer de fazer uma pequena participação no grupo que distribui comida que a Maíra comentou (Veja a parte 2 no link acima).
